fix alignment issues between observations and scores

--- a/app/sass/components/components.scss
+++ b/app/sass/components/components.scss
@@ -191,10 +191,10 @@
     margin-bottom: 30px;
     .c-score__date {
         color: #808285;
-        flex-basis: 20%;
+        flex-basis: 15%;
     }
     .c-score__details {
-        flex-basis: 60%;
+        flex-basis: 80%;
         h3 {
             font-weight: bold;
             margin-top: 0;
@@ -205,7 +205,7 @@
         }
     }
     .c-score__actions {
-        flex-basis: 20%;
+        flex-basis: 10%;
         img {
             margin-left: 15px;
         }
