--- a/public/css/app.css
+++ b/public/css/app.css
@@ -262,9 +262,9 @@ select {
   margin-bottom: 30px; }
   .c-score .c-score__date {
     color: #808285;
-    flex-basis: 20%; }
+    flex-basis: 15%; }
   .c-score .c-score__details {
-    flex-basis: 60%; }
+    flex-basis: 80%; }
     .c-score .c-score__details h3 {
       font-weight: bold;
       margin-top: 0;
@@ -272,7 +272,7 @@ select {
     .c-score .c-score__details span {
       margin-right: 10px; }
   .c-score .c-score__actions {
-    flex-basis: 20%; }
+    flex-basis: 10%; }
     .c-score .c-score__actions img {
       margin-left: 15px; }
 
